@@ -644,6 +644,50 @@ def test_include_recursion():
     schema.get_element('{http://tests.python-zeep.org/b}bar')
 
 
+def test_include_no_default_namespace():
+    node_a = etree.fromstring("""
+        <?xml version="1.0"?>
+        <xs:schema
+            xmlns="http://tests.python-zeep.org/tns"
+            xmlns:xs="http://www.w3.org/2001/XMLSchema"
+            targetNamespace="http://tests.python-zeep.org/tns"
+            elementFormDefault="qualified">
+
+            <xs:include
+                schemaLocation="http://tests.python-zeep.org/b.xsd"/>
+
+            <xs:element name="container" type="foo"/>
+        </xs:schema>
+    """.strip())
+
+    # include without default namespace, other xsd prefix
+    node_b = etree.fromstring("""
+        <?xml version="1.0"?>
+        <xsd:schema
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+            xmlns:tns="http://tests.python-zeep.org/b">
+
+            <xsd:simpleType name="my-string">
+              <xsd:restriction base="xsd:boolean"/>
+            </xsd:simpleType>
+
+            <xsd:complexType name="foo">
+              <xsd:sequence>
+                <xsd:element name="item" type="my-string"/>
+              </xsd:sequence>
+
+            </xsd:complexType>
+        </xsd:schema>
+    """.strip())
+
+    transport = DummyTransport()
+    transport.bind('http://tests.python-zeep.org/b.xsd', node_b)
+
+    schema = xsd.Schema(node_a, transport=transport)
+    item = schema.get_element('{http://tests.python-zeep.org/tns}container')
+    assert item
+
+
 def test_merge():
     node_a = etree.fromstring("""
         <?xml version="1.0"?>
